--- a/index.html
+++ b/index.html
@@ -8,14 +8,50 @@
 </head>
 <body>
 
-  <div class="timelineContainer">
+  <section class="timelineContainer">
     <div class="experience">
-      <div class="junior"></div>
-      <div class="designer"></div>
-      <div class="pm"></div>
+      <div id="junior">
+        <p class="period">EMSTONE - </br> Junior </br> Designer</p>
+        <div class="resp"></div>
+      </div>
+      <div id="designer">
+        <p class="period">EMSTONE - Designer</p>
+        <div class="resp"></div>
+      </div>
+      <div id="pm">
+        <p class="period">EMSTONE - Project Manager</p>
+        <div class="resp"></div>
+      </div>
     </div>
-    <div class="timeline"></div>
-  </div>
+    <div class="timeline">
+      <ul class="list">
+        <li class="timePeriod">
+          <div class="point"></div>
+          <div class="year">2013</div>
+        </li>
+        <li class="timePeriod">
+          <div class="point"></div>
+          <div class="year">2014</div>
+        </li>
+        <li class="timePeriod">
+          <div class="point"></div>
+          <div class="year">2015</div>
+        </li>
+        <li class="timePeriod">
+          <div class="point"></div>
+          <div class="year">2016</div>
+        </li>
+        <li class="timePeriod">
+          <div class="point"></div>
+          <div class="year">2017</div>
+        </li>
+        <li class="timePeriod">
+          <div class="point"></div>
+          <div class="year">2018</div>
+        </li>
+      </ul>
+    </div>
+  </section>
 
 
 
