responsibilities list added

--- a/index.html
+++ b/index.html
@@ -4,54 +4,87 @@
   <meta charset="UTF-8">
   <title>CV</title>
   <link rel="stylesheet" href="css/style.css">
-
 </head>
-<body>
 
-  <section class="timelineContainer">
-    <div class="experience">
-      <div id="junior">
-        <p class="period">EMSTONE - </br> Junior </br> Designer</p>
-        <div class="resp"></div>
+
+<body>
+<main>
+  <article id="experience">
+
+    <section class="timelineContainer">
+      <div class="timelineContent">
+        <div id="junior">
+          <p class="period">EMSTONE - </br> Junior </br> Designer</p>
+          <div class="resp"></div>
+        </div>
+        <div id="designer">
+          <p class="period">EMSTONE - Designer</p>
+          <div class="resp"></div>
+        </div>
+        <div id="pm">
+          <p class="period">EMSTONE - Project Manager</p>
+          <div class="resp"></div>
+        </div>
       </div>
-      <div id="designer">
-        <p class="period">EMSTONE - Designer</p>
-        <div class="resp"></div>
+      <div class="timeline">
+        <ul class="list">
+          <li class="timePeriod">
+            <div class="point"></div>
+            <div class="year">2013</div>
+          </li>
+          <li class="timePeriod">
+            <div class="point"></div>
+            <div class="year">2014</div>
+          </li>
+          <li class="timePeriod">
+            <div class="point"></div>
+            <div class="year">2015</div>
+          </li>
+          <li class="timePeriod">
+            <div class="point"></div>
+            <div class="year">2016</div>
+          </li>
+          <li class="timePeriod">
+            <div class="point"></div>
+            <div class="year">2017</div>
+          </li>
+          <li class="timePeriod">
+            <div class="point"></div>
+            <div class="year">2018</div>
+          </li>
+        </ul>
       </div>
-      <div id="pm">
-        <p class="period">EMSTONE - Project Manager</p>
-        <div class="resp"></div>
+    </section>
+
+    <section >
+      <div class="respHeader">
+        Responsibilities
       </div>
-    </div>
-    <div class="timeline">
-      <ul class="list">
-        <li class="timePeriod">
-          <div class="point"></div>
-          <div class="year">2013</div>
-        </li>
-        <li class="timePeriod">
-          <div class="point"></div>
-          <div class="year">2014</div>
-        </li>
-        <li class="timePeriod">
-          <div class="point"></div>
-          <div class="year">2015</div>
-        </li>
-        <li class="timePeriod">
-          <div class="point"></div>
-          <div class="year">2016</div>
-        </li>
-        <li class="timePeriod">
-          <div class="point"></div>
-          <div class="year">2017</div>
-        </li>
-        <li class="timePeriod">
-          <div class="point"></div>
-          <div class="year">2018</div>
-        </li>
-      </ul>
-    </div>
-  </section>
+      <div class="responsibilities">
+      <ul class="juniorResp">
+        <li>preparing workshop drawings with high accuracy and attention
+          to detail in accordance with high company standards</li>
+        </ul>
+        <ul class="designerResp">
+          <li>participation in elevation project, 3D modelling in Rhino 3D and Revit,
+            extensive detailing of interfaces</li>
+          <li> coordination with other companies</li>
+        </ul>
+          <ul class="pmResp">
+            <li>team support and coordination</li>
+            <li>documentation scope and quality check </li>
+            <li>establishing priorities, organising and planning work in line with construction plan and schedule</li>
+            <li>preparing set of standards for a project that is used to evaluate progress</li>
+            <li>preparing excel spreadsheets</li>
+            <li>collaboration with technicians and constructors</li>
+            <li>using on-line Collaboration Platform for the Real Estate and Construction Industry </li>
+            <li>working in BIM environment in Revit</li>
+          </ul>
+        </div>
+    </section>
+
+  <article>
+</main>
 
 
 
