--- a/index.html
+++ b/index.html
@@ -83,12 +83,15 @@
         </div>
     </section>
 
+   <div id="regions_div" style="width: 900px; height: 500px;";></div>
   <article>
 </main>
 
 
-
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="js/app.js"></script>
+
+
 
 
 </body>
