classes names review

--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CV</title>
+  <title>Timeline&map</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 
 <body>
 <main>
-  <article id="experience">
+  <article class="container">
 
-    <section class="timelineContainer">
+    <section class="timelineBox">
       <div class="timelineContent">
-        <div id="junior">
-          <p class="period">EMSTONE - </br> Junior </br> Designer</p>
+        <div class="firstBox">
+          <p class="period">TITLE - </br> Content </p>
           <div class="resp"></div>
         </div>
-        <div id="designer">
-          <p class="period">EMSTONE - Designer</p>
+        <div class="secondBox">
+          <p class="period">TITLE - Content</p>
           <div class="resp"></div>
         </div>
-        <div id="pm">
-          <p class="period">EMSTONE - Project Manager</p>
+        <div class="thirdBox">
+          <p class="period">TITLE - Content</p>
           <div class="resp"></div>
         </div>
       </div>
@@ -58,32 +58,26 @@
 
     <section >
       <div class="respHeader">
-        Responsibilities
+        Lorem ipsum
       </div>
-      <div class="responsibilities">
-      <ul class="juniorResp">
-        <li>preparing workshop drawings with high accuracy and attention
-          to detail in accordance with high company standards</li>
+      <div class="container1">
+      <ul class="firstBoxResp">
+        <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia repellendus aut pariatur, id eum beatae voluptatibus incidunt suscipit? Veritatis cupiditate voluptatibus cumque excepturi at enim architecto provident, sunt voluptatem, est.</li>
         </ul>
-        <ul class="designerResp">
-          <li>participation in elevation project, 3D modelling in Rhino 3D and Revit,
-            extensive detailing of interfaces</li>
-          <li> coordination with other companies</li>
+        <ul class="secondBoxResp">
+          <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae est ipsam repellendus explicabo neque minus culpa doloremque, quasi. Nulla sequi minima aut suscipit, quam autem vitae fugiat laborum doloribus eveniet?</li>
+          <li> Repudiandae est ipsam repellendus explicabo neque minus culpa doloremque, quasi. Nulla sequi minima aut</li>
         </ul>
-          <ul class="pmResp">
-            <li>team support and coordination</li>
-            <li>documentation scope and quality check </li>
-            <li>establishing priorities, organising and planning work in line with construction plan and schedule</li>
-            <li>preparing set of standards for a project that is used to evaluate progress</li>
-            <li>preparing excel spreadsheets</li>
-            <li>collaboration with technicians and constructors</li>
-            <li>using on-line Collaboration Platform for the Real Estate and Construction Industry </li>
-            <li>working in BIM environment in Revit</li>
+          <ul class="thirdBoxResp">
+            <li>repellendus explicabo neque minus culpa doloremque, quasi. Nulla sequi minima aut</li>
+            <li>Repudiandae est  </li>
+            <li> repellendus explicabo neque minus culpa doloremque, quasi. Nulla sequi minima aut</li>
+            <li> doloremque, quasi. Nulla sequi minima aut</li>
           </ul>
         </div>
     </section>
 
-   <div id="regions_div" style="width: 900px; height: 500px;";></div>
+   <div class="regions_div" style="width: 900px; height: 500px;";></div>
   <article>
 </main>
 
